test/success/integration/_succ_expr_if_1.hs
x :: Int
x = if True then 3 else 4
main = print x