test/fail/integration/_fail_grammar_if_block_imper_3.hs
main = if True then print "hello" else print jil